--- a/pages/team.html
+++ b/pages/team.html
@@ -33,12 +33,12 @@
             <h4>Founder & CEO</h4>
         </div>
         <div class="team-member">
-            <img src="../images/co-founder watty.jpg" alt="Watty - Co-Founder">
+            <img src="../images/co-founder watty" alt="Watty - Co-Founder">
             <h3>Watty Sithagu</h3>
             <h4>Co-Founder & Sales</h4>
         </div>
         <div class="team-member">
-            <img src="../images/co founder priv.jpg" alt="Privilege - Co-Founder">
+            <img src="../images/co founder priv" alt="Privilege - Co-Founder">
             <h3>Privilege Sithagu</h3>
             <h4>Co-Founder & Marketing</h4>
         </div>
