--- a/pages/about.html
+++ b/pages/about.html
@@ -6,7 +6,7 @@
     <title>About - Freshlane</title>
     <meta name="description" content="Learn about Freshlane, the youth streetwear brand inspiring the next generation with hoodies, cargos, and stylish outfits.">
     <meta name="keywords" content="Freshlane, streetwear, hoodies, cargo pants, youth fashion, About Us">
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="..css/style.css">
 </head>
 <body>
 
