--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 <body>
 
 <header>
+    <header>
     <h1>Freshlane</h1>
+
     <nav>
         <ul id="nav-links">
             <li><a href="index.html" class="active">Home</a></li>
@@ -41,8 +43,16 @@
             <li><a href="pages/about.html">About</a></li>
             <li><a href="pages/enquiry.html">Enquiry</a></li>
         </ul>
-        <div class="hamburger" id="hamburger">&#9776;</div>
+
+        <!--  HAMBURGER -->
+        <div class="hamburger" id="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </nav>
+</header>
+
 </header>
 
 <section id="hero">
