--- a/pages/enquiry.html
+++ b/pages/enquiry.html
@@ -24,7 +24,12 @@
       <li><a href="about.html">About</a></li>
       <li><a href="enquiry.html" class="active">Enquiry</a></li>
     </ul>
-    <div class="hamburger" id="hamburger">&#9776;</div>
+    <div class="hamburger">
+    <span></span>
+    <span></span>
+    <span></span>
+</div>
+
   </nav>
 </header>
 
