--- a/pages/enquiry.html
+++ b/pages/enquiry.html
@@ -121,5 +121,16 @@ function validateForm() {
 }
 </script>
 
+<script>
+const hamburger = document.querySelector(".hamburger");
+const navLinks = document.getElementById("nav-links");
+
+if(hamburger && navLinks){
+    hamburger.addEventListener("click", () => {
+        navLinks.classList.toggle("show");
+        hamburger.classList.toggle("active");
+    });
+}
+</script>
 </body>
 </html>
