--- a/pages/team.html
+++ b/pages/team.html
@@ -75,6 +75,16 @@ function displayTime() {
 setInterval(displayTime, 1000);
 displayTime();
 </script>
+<script>
+const hamburger = document.querySelector(".hamburger");
+const navLinks = document.getElementById("nav-links");
 
+if(hamburger && navLinks){
+    hamburger.addEventListener("click", () => {
+        navLinks.classList.toggle("show");
+        hamburger.classList.toggle("active");
+    });
+}
+</script>
 </body>
 </html>
